manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-winter-loadbalancer-service
  labels:
    app: app1-winter
spec:
  type: LoadBalancer
  selector:
    app: app1-winter
  ports:
    - port: 70
      targetPort: 70
