manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: winter-project-ingress-service
  namespace: prod
  #annotations:
    #kubernetes.io/ingress.class: nginx  
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app1-winter-frontend-clusterip-service
              port:
                number: 80
        - path: /api/
          pathType: Prefix
          backend:
            service:
              name: app1-winter-cluster-ip-service
              port:
                number: 70    
        - path: /api-calorie
          pathType: Prefix
          backend:
            service:
              name: calorie-app-cluster-ip-service
              port:
                number: 50
